--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,5 +9,22 @@ html, body {
 }
 
 body {
+  padding: 1rem;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.container {
+  border: 1px dashed rgba(0,0,0,0.25);
+  width: fit-content;
+  padding: 1rem;
+}
+
+.messages {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
