--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,10 @@ extends layout
 
 block content
   h1= title
-  p Welcome to the Message Board.
+  ul(class='container messages')
+    each message in messages 
+      li
+        strong #{message.user}: 
+        | #{message.text}
+        br
+        small #{message.added}
