--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
+  align-items: start;
   gap: 1rem;
 }
 
@@ -27,4 +28,14 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 0.5rem;
+}
+
+.form button {
+  grid-column: 1 / 3;
 }
