explicit use of '/' as '/messages'

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,4 +9,4 @@ block content
         | #{message.text}
         br
         small #{message.added}
-  a(href="/new") New Message
+  a(href="/messages/new") New Message
