--- a/views/new.pug
+++ b/views/new.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  form(method='POST' action='/new' class='form container')
+  form(method='POST' action='/messages/new' class='form container')
     label(for='message') Message: 
     input(type='text' name='message' id='message' required)
     label(for='username') Username: 
