--- a/views/top.ejs
+++ b/views/top.ejs
@@ -3,5 +3,6 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel="stylesheet" type="text/css" href="../style.css">
   </head>
   <body>
