query all data from db instead of memory

--- a/views/pages/message.ejs
+++ b/views/pages/message.ejs
@@ -3,9 +3,9 @@
 <h1>Viewing Message</h1>
 
 <p>
-  <b>Username:</b> <%= locals.message.user %> <br>
-  <b>Text: </b> <%= locals.message.text %> <br>
-  <b>Date sent: </b> <%= locals.message.added %> <br>
+  <b>Username:</b> <%= message.username %> <br>
+  <b>Text: </b> <%= message.message %> <br>
+  <b>Date sent: </b> <%= message.date %> <br>
 </p>
 
 <a href="/messages">Go Back</a>
